--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -222,3 +222,11 @@ extraction and categorization",
  publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
 } 
+@book{Manning:2008:IIR:1394399,
+ author = {Manning, Christopher D. and Raghavan, Prabhakar and Sch\"{u}tze, Hinrich},
+ title = {Introduction to Information Retrieval},
+ year = {2008},
+ isbn = {0521865719, 9780521865715},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
