--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -230,3 +230,30 @@ extraction and categorization",
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
 } 
+
+@article{Nigam:2000:TCL:347709.347724,
+ author = {Nigam, Kamal and McCallum, Andrew Kachites and Thrun, Sebastian and Mitchell, Tom},
+ title = {Text Classification from Labeled and Unlabeled Documents Using EM},
+ journal = {Mach. Learn.},
+ issue_date = {May-June 2000},
+ volume = {39},
+ number = {2-3},
+ month = may,
+ year = {2000},
+ issn = {0885-6125},
+ pages = {103--134},
+ numpages = {32},
+ url = {http://dx.doi.org/10.1023/A:1007692713085},
+ doi = {10.1023/A:1007692713085},
+ acmid = {347724},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {Bayesian learning, Expectation-Maximization, combining labeled and unlabeled data, integrating supervised and unsupervised learning, text classification},
+} 
+
+
+@misc{SentimentinSocialMedia,
+author = {Pålsson, A., and Szerszen, D.},
+ title = {Sentiment Classification in Social Media: An Analysis of Methods and the Impact of Emoticon Removal (Dissertation)},
+ year  = {2016}
+}
